Add a DCHECK in mojo/public/cpp/system/handle.h

Bug: 821030
Change-Id: Iec0c32ba9cc7cb0335e7c320179e2689ab59bba6
Reviewed-on: https://chromium-review.googlesource.com/957918
Reviewed-by: Ken Rockot <rockot@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Helen Li <xunjieli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550477}
Former-commit-id: 258b4c2761f30fc3b93041fc97cdc70fe461f217